# meeting-spliter

./: .gitignore  README.md  pyproject.toml
src/: Dump_Json.py  classifer.py  grade.py  main.py  models.py  records.py  spliter.py  utils.py
